# LBR-26-Ground-Software

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  config.demo.yaml  dev.ps1  pytest.ini
.github/workflows/: ci.yml  nightly.yml  release.yml
LoRa/: CMakeLists.txt  README.md  config.demo.yaml  config.feature-test-zmq.yaml  config.feature-test.yaml
LoRa/archive/connector/: checksum.cc  checksum.h
LoRa/docs/: connector-message.example.json  connector-message.nanopb.options  connector-message.proto  connector-message.schema.json  connector.md  protobuf-nanopb.md  telemetry-message.nanopb.options  telemetry-message.proto
LoRa/include/: pb.h  pb_common.h  pb_decode.h  sdr_pipeline.h
LoRa/include/cli/: args.h  config.h
LoRa/include/connector/: checksum.h  local_tcp_transport.h  local_udp_transport.h  local_zmq_transport.h  message.h  ndjson_file.h
LoRa/include/periph/: i_lora_module.h  sx1262_module.h  sx127_module.h
LoRa/include/telemetry/: decoded_telemetry_publisher.h  decoded_telemetry_serializer.h  interpreter.h  payload_serializer.h  simulation_payloads.h  telemetry-message.pb.h  telemetry_fields.h  test_payloads.h
LoRa/src/: CMakeLists.txt  hil_runner.cc  main.cc  sdr_pipeline.cc
LoRa/src/cli/: args.cc  config.cc
LoRa/src/connector/: checksum.cc  local_tcp_transport.cc  local_udp_transport.cc  local_zmq_transport.cc  message.cc  ndjson_file.cc
LoRa/src/periph/: sx1262_module.cc  sx127_module.cc
LoRa/src/telemetry/: decoded_telemetry_publisher.cc  decoded_telemetry_serializer.cc  interpreter.cc  simulation_payloads.cc  telemetry-message.pb.cc
LoRa/tests/: CMakeLists.txt  args_tests.cc  config_tests.cc  connector_tests.cc  pipeline_tests.cc  telemetry_interpreter_tests.cc  telemetry_serializer_tests.cc  test_common.h
docs/: Doxyfile.in  README.md  architecture.md  build-and-run.md  configuration.md  release.md
gui/: main.py
gui/.github/workflows/: ci.yml
gui/data/: data.py  factory.py  mockdata.py
gui/docs/: README.md  build-and-run.md
gui/models/: models.py
gui/tests/: test_data_source_factory.py  test_gui_smoke.py  test_packet_panel.py  test_telemetry_cards.py
gui/ui/: main_window.py
gui/ui/widgets/: alert_rules.py  graphs_panel.py  log_panel.py  packet_panel.py  packet_panel_formatting.py  status_bar.py  telemetry_cards.py  terminal_panel.py
include/: sdr_pipeline.h
include/cli/: config.h
installer/windows/: README.md  lbr-ground-installer.iss
src/: main.cc  sdr_pipeline.cc
src/cli/: config.cc
tests/: config_tests.cc  pipeline_tests.cc  test_main.cc
tools/: build.ps1  check_file_headers.cmake  dev.ps1  prepare-installer-input.ps1
